# vulkan_renderer

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  build_lib.bat  build_lib.sh  build_release.bat  build_release.sh  build_release_info.bat  build_release_info.sh  build_run.bat  build_run.sh  build_test.bat  build_test.sh  build_test_batch.bat  build_test_batch.sh  build_xcode.sh  validate_pipeline_cache.sh
app/: CMakeLists.txt
app/assets/: cube.slang  cube.spv
app/src/: main.c
lib/: CMakeLists.txt
lib/assets/: cube.slang  cube.spv  shaders.slang  shaders.spv  triangle.spv
lib/src/: application.h  arena.c  arena.h  array.h  bitset.c  bitset.h  clock.c  clock.h  core.c  core.h  defines.h  event.c  event.h  event_data_buffer.h  input.c  input.h  logger.c  logger.h  mmemory.c  mmemory.h  pch.h  platform.h  platform_macos.c  platform_macos.m  queue.h  str.c  str.h  string.c  string.h  vector.h  vkr_pch.h  window.h  window_macos.m
lib/src/containers/: array.h  bitset.c  bitset.h  queue.h  str.c  str.h  vector.h  vkr_freelist.c  vkr_freelist.h  vkr_hashtable.h
lib/src/core/: clock.c  clock.h  entity.c  entity.h  event.c  event.h  event_data_buffer.c  event_data_buffer.h  input.c  input.h  logger.c  logger.h  vkr_atomic.c  vkr_atomic.h  vkr_clock.c  vkr_clock.h  vkr_entity.c  vkr_entity.h  vkr_event_data_buffer.c  vkr_event_data_buffer.h  vkr_gamepad.h  vkr_job_system.c  vkr_job_system.h  vkr_json.c  vkr_json.h  vkr_text.c  vkr_text.h  vkr_threads.h  vkr_window.h
lib/src/filesystem/: filesystem.c  filesystem.h  filesystem_macos.c
lib/src/math/: mat.h  math.h  math_defines.h  math_utils.h  quat.h  simd.h  vec.h  vkr_frustum.c  vkr_frustum.h  vkr_math.h  vkr_quat.h  vkr_simd.h  vkr_transform.c  vkr_transform.h
lib/src/memory/: arena.c  arena.h  mmemory.c  mmemory.h  vkr_allocator.c  vkr_allocator.h  vkr_arena_allocator.c  vkr_arena_allocator.h  vkr_arena_pool.c  vkr_arena_pool.h  vkr_dmemory.c  vkr_dmemory.h  vkr_dmemory_allocator.c  vkr_dmemory_allocator.h  vkr_pool.c  vkr_pool.h  vkr_pool_allocator.c  vkr_pool_allocator.h
lib/src/platform/: platform.h  platform_macos.c  platform_windows.c  threads.h  threads_mac.c  threads_windows.c  vkr_filesystem_mac.c  vkr_filesystem_windows.c  vkr_gamepad.h  vkr_gamepad_macos.c  vkr_gamepad_macos.m  vkr_gamepad_windows.c  vkr_platform.h  vkr_platform_macos.c  vkr_platform_windows.c  vkr_threads.h  vkr_threads_mac.c  vkr_threads_windows.c  vkr_window_macos.m  vkr_window_windows.c  window.h  window_macos.m  window_windows.c
lib/src/renderer/: renderer.h  renderer_frontend.c  renderer_frontend.h  vkr_buffer.c  vkr_buffer.h  vkr_draw_batch.c  vkr_draw_batch.h  vkr_indirect_draw.c  vkr_indirect_draw.h  vkr_instance_buffer.c  vkr_instance_buffer.h  vkr_render_graph.c  vkr_render_graph.h  vkr_render_graph_internal.h  vkr_render_packet.h  vkr_renderer.h  vkr_rg_compile.c  vkr_rg_debug.c  vkr_rg_debug.h  vkr_rg_execute.c  vkr_rg_json.c  vkr_rg_json.h  vkr_viewport.c  vkr_viewport.h
lib/src/renderer/passes/: vkr_pass_editor.c  vkr_pass_editor.h  vkr_pass_picking.c  vkr_pass_picking.h  vkr_pass_shadow.c  vkr_pass_shadow.h  vkr_pass_skybox.c  vkr_pass_skybox.h  vkr_pass_ui.c  vkr_pass_ui.h  vkr_pass_world.c  vkr_pass_world.h
lib/src/renderer/passes/internal/: vkr_pass_draw_utils.c  vkr_pass_draw_utils.h
lib/src/renderer/resources/: buffer.c  buffer.h  camera.c  camera.h  mesh.c  mesh.h  resources.h  vkr_resources.h  vkr_texture.c  vkr_texture.h
lib/src/renderer/resources/loaders/: bitmap_font_loader.c  bitmap_font_loader.h  material_loader.c  material_loader.h  mesh_loader.c  mesh_loader.h  mesh_loader_gltf.c  mesh_loader_gltf.h  (+10 more)
lib/src/renderer/systems/: vkr_camera.c  vkr_camera.h  vkr_camera_controller.c  vkr_camera_controller.h  vkr_editor_viewport.c  vkr_editor_viewport.h  vkr_font_system.c  vkr_font_system.h  vkr_geometry_system.c  vkr_geometry_system.h  vkr_gizmo_system.c  vkr_gizmo_system.h  vkr_layer_messages.c  vkr_layer_messages.h  vkr_lighting_system.c  vkr_lighting_system.h  vkr_material_system.c  vkr_material_system.h  vkr_mesh_manager.c  vkr_mesh_manager.h  vkr_picking_ids.h  vkr_picking_system.c  vkr_picking_system.h  vkr_pipeline_registry.c  vkr_pipeline_registry.h  vkr_resource_system.c  vkr_resource_system.h  vkr_scene_system.c  vkr_scene_system.h  vkr_shader_system.c  vkr_shader_system.h  vkr_shadow_system.c  vkr_shadow_system.h  vkr_skybox_system.c  vkr_skybox_system.h  vkr_texture_system.c  vkr_texture_system.h  vkr_ui_system.c  vkr_ui_system.h  vkr_view_system.c  (+3 more)
lib/src/renderer/vulkan/: vulkan_allocator.c  vulkan_allocator.h  vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command.c  vulkan_command.h  vulkan_debug.c  vulkan_debug.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_instance.c  vulkan_instance.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_shaders.c  vulkan_shaders.h  vulkan_spirv_reflection.c  vulkan_spirv_reflection.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.c  vulkan_utils.h
lib/src/simd/: simd.h
tests/: CMakeLists.txt
tests/src/: allocator_test.c  allocator_test.h  arena_test.c  arena_test.h  array_test.h  array_tests.c  atomic_test.c  atomic_test.h  bitset_test.c  bitset_test.h  clock_test.c  clock_test.h  dmemory_test.c  dmemory_test.h  entity_test.c  entity_test.h  event_data_buffer_test.c  event_data_buffer_test.h  event_test.c  event_test.h  filesystem_test.c  filesystem_test.h  freelist_test.c  freelist_test.h  gltf_importer_tests.c  gltf_importer_tests.h  hashtable_test.c  hashtable_test.h  input_test.c  input_test.h  job_system_test.c  job_system_test.h  json_test.c  json_test.h  mat_test.c  mat_test.h  material_pbr_tests.c  material_pbr_tests.h  math_test.c  math_test.h  (+36 more)
tools/: CMakeLists.txt  benchmark_multithreaded_backend.sh  pack_vkt_textures.sh  validate_multithreaded_backend_matrix.sh  vkr_bash_env.sh  vkr_vkt_packer.cpp
(+131 files in other folders)
